fix: to white space of LisgoHeadingContainer at smaller screen sizes

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -183,7 +183,6 @@
   }
   .LisgoHeadingContainer {
     flex-direction: column;
-    align-items: stretch !important;
     justify-content: space-evenly;
     height: 100%;
   }
@@ -201,6 +200,11 @@
 @media only screen and (max-width: 768px) {
   .leading-company-heading {
     font-size: 2.5rem;
+  }
+  .LisgoHeadingContainer {
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
   }
   .LisgoHomeLogoContainer > svg {
     height: 225px !important;
